Revert "Revert "support java 8 in ReadUsedClassLoader""
This reverts commit 031172aae21b7a13be02af45aa75910a4bf1f7a6.