@@ -1,6 +1,7 @@
 package lsfusion.base.classloader;
 
 import com.google.common.base.Throwables;
+import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -26,7 +27,7 @@ public class ReadUsedClassLoader extends ClassLoader {
         if (resourceAsStream != null) { //call from the server. Save classes that are used in .jrxml
             try {
                 if (!name.startsWith("lsfusion/base") && !name.startsWith("java") && !name.startsWith("net/sf")) //save classes that will not be in the client's classpath
-                    classes.put(name, resourceAsStream.readAllBytes());
+                    classes.put(name, IOUtils.toByteArray(resourceAsStream));
             } catch (IOException e) {
                 Throwables.propagate(e);
             }
